logs/Slang/chapter-7/arrays/packed/variable-slice-zero.sv.log
name: operations-on-arrays-variable-slice-zero-rw
description: Test packed arrays operations support (Variable slice)
should_fail: 1
tags: 7.4.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/packed/variable-slice-zero.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/packed/variable-slice-zero.sv:27:11: error: value must be positive
	arr_b[4+:c] = arr_a[1+:c];
	         ^
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-7/arrays/packed/variable-slice-zero.sv:27:25: error: value must be positive
	arr_b[4+:c] = arr_a[1+:c];
	                       ^
